# lyngdorf-knob

./: .flickrExclusion  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SESSION_NOTES.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
docs/: index.html  manifest.json  schematic_context.json
docs/references/: lyngdorf-api.md  related-projects.md
main/: CMakeLists.txt  app_config.c  app_config.h  battery.c  battery.h  display.c  display.h  encoder.c  encoder.h  haptic.c  haptic.h  idf_component.yml  log_buffer.c  log_buffer.h  lyngdorf.c  lyngdorf.h  main.c  metadata.c  metadata.h  power.c  power.h  touch.c  touch.h  ui.c  ui.h  upnp.c  upnp.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
